--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-paginate": "^8.3.0",
     "react-pagination": "^1.0.0",
     "react-router-dom": "^7.2.0",
     "react-select": "^5.10.1",
